--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "henry-portfolio",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -9,15 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^4.4.1",
-    "@emailjs/browser": "^4.4.1",
-    "@tailwindcss/vite": "^4.1.16",
-    "@tsparticles/all": "^3.9.1",
-    "@tsparticles/react": "^3.0.0",
-    "astro": "^5.15.2",
-    "install": "^0.13.0",
-    "npm": "^11.6.2",
-    "react-icons": "^5.5.0",
-    "tailwindcss": "^4.1.16"
+    "@tailwindcss/vite": "^4.1.18",
+    "astro": "^5.17.1",
+    "tailwindcss": "^4.1.18"
   }
 }
